--- a/KivyUI/color.kv
+++ b/KivyUI/color.kv
@@ -3,5 +3,6 @@
     padding: 50
     Button:
         text: "Click me!"
+        background_normal: ''
         background_color: root.color 
         on_press: root.change_color()
